myproject_src = files([
    'rotate90.h',
    'main.cc' # список исходных файлов
])

executable(
    'myproject', #название исполняемого файла
    include_directories: src, # список исходных файлов
    sources: myproject_src,
    dependencies: [], # завистиости проекта
    install: true # устанавливать ли файлы
)
